Fixed alignment errors
* Fixed anchor point distance
* Added padding to contents

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ li{
 /*=== Section contents ===*/
 .section-anchor-displace{
     position: absolute;
-    top: -140px;
+    top: -167px;
 }
 
 .section-content{
@@ -206,7 +206,7 @@ li{
 .section-content-heading{
     grid-area: header;
     letter-spacing: 10px;
-    /* padding-bottom: 10px; */
+    padding-bottom: 20px;
     /* border: 1px solid #000; */
 }
 
@@ -275,6 +275,10 @@ li{
     max-width: 100%;
     max-height: 100%;
     border-radius: 10px;
+}
+
+.text-list{
+    padding: 10px 0;
 }
 
 /*=== Decorative Side bars ===*/
